--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -17,6 +17,14 @@ skip-name-resolve
 {% if mysql_sql_mode %}
 sql_mode = {{ mysql_sql_mode }}
 {% endif %}
+{% if mysql_skip_networking %}
+skip-networking = {{ mysql_skip_networking }}
+{% endif %}
+{% if mysql_secure_file_priv|length %}
+secure_file_priv = "{{ mysql_secure_file_priv | default('/usr/local/mysql-files') }}"
+{% elif mysql_disable_local_infile %}
+set-variable = local-infile=0
+{% endif %}
 
 # Logging configuration.
 {% if mysql_log_error == 'syslog' or mysql_log == 'syslog' %}
